src/objects/BillServiceType__c.object
<CustomObject>
    <fields>
        <fullName>Bill__c</fullName>
        <label>Bill</label>
        <referenceTo>Bill__c</referenceTo>
        <relationshipName>BillServicesTypes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HerokuPostgresId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>20 Sep 2017, P Dixon - external id for Heroku mastered objects</description>
        <externalId>true</externalId>
        <label>Heroku Postgres Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ServiceType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Type</label>
        <referenceTo>ServiceType__c</referenceTo>
        <relationshipName>BillServicesTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Bill Service Type</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bill Service Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bill Service Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>